# stereo-vision

./: .gitconfig  .gitignore  .gitmessage  .gitmodules  README.md
libelas/: CMakeLists.txt  README.TXT
libelas/matlab/: demo.m  elasMex.cpp  make.m  process.m
libelas/src/: descriptor.cpp  descriptor.h  elas.cpp  elas.h  main.cpp
libviso2/matlab/: demo_matching_flow.m  demo_structure_from_motion.m  make.m  visualOdometryStereoMex.cpp
libviso2/src/: filter.cpp  filter.h  matcher.cpp  matcher.h  matrix.cpp  matrix.h  reconstruction.cpp  timer.h  triangle.cpp  triangle.h  viso.cpp  viso.h  viso_stereo.cpp  viso_stereo.h
result/: 2011_09_26_drive_0029_ground-truth.gpx  2011_09_26_drive_0029_visual-odom.gpx
stereomapper/: Makefile  calibio.cpp  calibio.h  calibiokitti.cpp  calibiokitti.h  coordinateconverter.h  framecapturethread.cpp  framecapturethread.h  gpsinertialdata.cpp  gpsinertialdata.h  gpsinertialdataiokitti.cpp  gpsinertialdataiokitti.h  gpxgenerator.cpp  gpxgenerator.h  headingfilter.cpp  headingfilter.h  main.cpp  maindialog.cpp  maindialog.h  maindialog.ui  moc_multiviewthread.cpp  moc_quadmatcherthread.cpp  oxtsiokitti.cpp  oxtsiokitti.h  planeestimation.cpp  planeestimation.h  positionfilter.cpp  positionfilter.h  readfromfilesthread.cpp  readfromfilesthread.h  savestereoimagethread.cpp  savestereoimagethread.h  selectcamerasdialog.cpp  selectcamerasdialog.h  selectcamerasdialog.ui  stereoimage.cpp  stereoimage.h  stereoimageiokitti.cpp  stereoimageiokitti.h  stereomapper.pro  (+10 more)
